# aide

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/buffer/: history.rs  mod.rs  text_buffer.rs
src/editor/: cursor.rs  gutter.rs  mod.rs  view.rs
src/highlight/: mod.rs  theme.rs
src/lsp/: client.rs  completion.rs  diagnostics.rs  mod.rs
src/terminal/: mod.rs  pty.rs  view.rs
src/ui/: mod.rs  sidebar.rs  statusbar.rs  tabs.rs
